tests/parser_cases/invalid/bad_string_literal_embedded_quote.ob0
MODULE Main;
BEGIN
  WriteString("Hello "Oberon"")
END Main.
